# half-orm-litestar

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: angular-silo-architecture.md  backend-architecture.md  crud_access.md  frontend-architecture.md  svelte-silo-architecture.md
docs/angular/: access-control.md  silo-architecture.md
docs/backend/: authorization.md
docs/backend/fastapi/: architecture.md
docs/backend/litestar/: architecture.md
docs/frontend/: architecture.md  code-organization.md
docs/svelte/: access-control.md  silo-architecture.md
fixtures/: blog_demo.sql
half_orm_gen/: cli_extension.py  crud_routes.py  generate.py  runtime.py  scaffold.py  templates.py  templates_fastapi.py  templates_filters.ts  tools.py
half_orm_gen/backend/: api_routes.py  crud_routes.py  generate.py
half_orm_gen/backend/fastapi/v0/: runtime.py  scaffold.py  templates.py
half_orm_gen/backend/ho_api/: __init__.py  ddl.py  loader.py  models.py  registry.py
half_orm_gen/backend/litestar/v2/: ho_admin.py  runtime.py  scaffold.py  templates.py
half_orm_gen/frontend/: __init__.py  base.py  templates_filters.ts
half_orm_gen/frontend/angular/v19/: _app_shell.py  _detail_component.py  _form_components.py  _helpers.py  _ho_admin.py  _list_component.py  _pages.py  _permissions_matrix.py  _specs.py  _static.py  _store.py  angular.py  resource.silo.ts  schema.types.ts  silo-registry.service.ts  test-utils.ts
half_orm_gen/frontend/svelte/v5/: PermissionsFields.svelte  PermissionsMatrix.svelte  resource.silo.svelte.ts  schema.types.ts  silo-registry.svelte.ts  svelte.py  svelte_store.py
half_orm_gen/gen_app/: angular.py  svelte.py
half_orm_gen/gen_app/assets/angular/: resource.silo.ts
half_orm_gen/gen_app/assets/angular/v19/: angular.py  resource.silo.ts  schema.types.ts
half_orm_gen/gen_app/assets/svelte/: resource.silo.svelte.ts  silo-registry.svelte.ts
half_orm_gen/gen_app/assets/svelte/v5/: resource.silo.svelte.ts  schema.types.ts  svelte.py
half_orm_gen/gen_store/: svelte.py
half_orm_gen/scaffolding/: guards.py
half_orm_litestar/: __init__.py  api_routes.py  cli_extension.py  crud_routes.py  generate.py  scaffold.py  templates.py  templates_fastapi.py  tools.py
half_orm_litestar/gen_app/: __init__.py  angular.py  svelte.py
half_orm_litestar/gen_store/: __init__.py  base.py  svelte.py
half_orm_litestar/scaffolding/: custom_authorization.py  custom_init.py  custom_middlewares_init.py  custom_routes.py  guards.py  roles_core.py
half_orm_test_extension/: __init__.py  cli_extension.py
planning/: a_resoudre.md  association_display.md  auto-crud.md  gen-frontend-store.md  gen-frontend.md  graph-fetch-export.md  relation_name_encoding.md  tout-dynamique.md
tests/: test_extension.py
tests/e2e/scripts/: common.sh  demo_blog.sh
tests/e2e/scripts/.config/: blog_demo
