[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "half_orm_litestar"
dynamic = ["version"]
dependencies = [
    "half-orm>=0.17.0,<0.18",
    "litestar>=2.0.0",
]
description = "Litestar API generation for halfORM projects."
readme = "README.md"
keywords = ["postgres", "relation-object mapping"]
authors = [
    {name = "Joël Maïzi", email = "joel.maizi@collorg.org"}
]
license = "GPL-3.0-or-later"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",

    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",

    # Specify the Python versions you support here
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/half-orm/half-orm-litestar"

[tool.setuptools.packages.find]
where = ["."]
include = ["half_orm_litestar*"]

[tool.setuptools.package-data]
half_orm_litestar = [
    "version.txt",
    "scaffolding/*.py",
]

[tool.setuptools.dynamic]
version = {file = "half_orm_litestar/version.txt"}
