[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "half_orm_gen"
dynamic = ["version"]
dependencies = [
    "half-orm>=1.0.0rc15,<1.1.0",
    "half-orm-dev>=1.0.0a32,<1.1.0",
    "litestar>=2.0.0",
]
description = "API and frontend backoffice generation for halfORM projects."
readme = "README.md"
keywords = ["litestar", "half-orm", "rest", "api", "postgresql", "code-generation", "asgi", "orm", "svelte", "angular"]
authors = [
    {name = "Joël Maïzi", email = "joel.maizi@collorg.org"}
]
license = "GPL-3.0-or-later"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",

    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",

    # Specify the Python versions you support here
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/half-orm/half-orm-gen"

[tool.setuptools.packages.find]
where = ["."]
include = ["half_orm_gen*"]

[tool.setuptools.package-data]
half_orm_gen = [
    "version.txt",
    "scaffolding/*.py",
    "assets/*",
]

[tool.setuptools.dynamic]
version = {file = "half_orm_gen/version.txt"}
